--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse,intellij,java,maven,dbeaver,windows
+
+DBConnection.class
+DBConnection.java
+DBConnection.*
